# network-scanner-humanlife

./: .gitignore  ATTRIBUTION.md  Cargo.toml  LICENSE  PROJECT_ANALYSIS.md  README.md  flash.sh
crates/ns3d-core/: Cargo.toml
crates/ns3d-core/src/: lib.rs
crates/ns3d-scanner/: Cargo.toml
crates/ns3d-scanner/src/: main.rs
crates/ns3d-server/: Cargo.toml
crates/ns3d-server/src/: main.rs
crates/ns3d-signal/: Cargo.toml
crates/ns3d-signal/src/: lib.rs  pipeline.rs  presence.rs  vitals.rs
firmware/esp32s3/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
firmware/esp32s3/main/: CMakeLists.txt  csi_capture.c  csi_capture.c.orig  csi_capture_patched.c
web/: index.html
