[package]
name        = "ns3d-core"
description = "Shared types for Network-Scanner-3D"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
authors.workspace     = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
